# Quadruped-Robot

./: README.md
foothold_pub/: CMakeLists.txt  package.xml
foothold_pub/include/: foothold_map.h  foothold_pub.h
foothold_pub/src/: foothold_map.cpp  foothold_pub.cpp  foothold_pub_node.cpp
robots/a1_description/launch/: a1_rviz.launch  check_joint.rviz
robots/a1_description/urdf/: a1_champ.urdf
robots/a1_description/xacro/: depth_camera.urdf.xacro  robot.xacro
robots/aliengo_description/xacro/: aliengo.champ.urdf
unitree_controller/launch/: set_ctrl.launch
unitree_controller/src/: body.cpp  kinematic.cpp  servo.cpp
unitree_gazebo/launch/: normal.launch
unitree_gazebo/plugin/: draw_force_plugin.cc
unitree_gazebo/worlds/: stairs.world
unitree_legged_msgs/: CMakeLists.txt
walking_controller/: CMakeLists.txt  README.md  package.xml
walking_controller/include/: a1.h  a1_components.h  body_controller.h  controller.h  foot_trajectory_planner.h  kinematics.h  leg_controller.h  phase_signal_generator.h
walking_controller/include/walking_controller/: QuadProg++.h  a1.h  a1_adapter.h  controller.h  foot_trajectory_planner.h  kinematics.h  leg_controller.h  macros.h  phase_signal_generator.h  pose_optimizer.h  real_robot.h  typedefs.hpp  util_transformations.h
walking_controller/launch/: state_estimator.launch
walking_controller/scripts/: pose_optimizer.py  random_action.py
walking_controller/src/: QuadProg++.cc  a1_adapter.cpp  body_controller.cpp  controller.cpp  controller_node.cpp  foot_trajectory_planner.cpp  kinematics.cpp  leg_controller.cpp  phase_signal_generator.cpp  pose_optimizer.cpp  real_bot.cpp  real_robot.cpp  util_transformations.cpp
walking_controller/src/lowstate_pub/: lowstate_pub.cpp
